syntax = "proto3";

option go_package = ".;proto";
package proto;

service SayHello {
  rpc HelloL(HelloRequest) returns (HelloResponse) {}
}

message HelloRequest {
  string requestName = 1;
  int64 age = 2;
}

message HelloResponse {
  string responseMes = 1;
}